--- a/index.html
+++ b/index.html
@@ -169,16 +169,19 @@
             			<i class="fa fa-envelope"></i>
 					</a></br>
 				<p>
-					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. 
-					   We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. Let's pledge 
-					   ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and 
-					   different races."</p>  
+					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">For the Gulf Coast and the five south western states, I will:
+					   introduce waterfarming as the new oil. From now on water from yearly hurricane and flooding of the southern and some midwestern states will be treated as a gift of nature and an asset 
+					   we could use to replace oil. Mega-reservoirs, mega-drain-pipelines and state of the art water collection and treatment system will turn yearly "disaster water" into something California, 
+					   Texas, New Mexico, Utah and Arizona farmers could tap into - in times of drought. Treated water pipelines running up to the north and north west corner of America could turn non-agricultural 
+					   states into a pastural land. Same pipeline could be used to supply fresh water to 3billion people in Bangladesh, India and Indonesia. If we remove the fear of annual disastrous flooding, 
+					   southern states like Florida, Louisiana, Alabama, Mississippi and Texas would counduct business all year long - without fear of disruption.</p>  
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p> 
-					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But who am i? 
-					   Well, I am a Radical Republican, and i believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. Or let's just say, 
-					   I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class. Therefore, for the benefit of commerce, 
-					   agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's 
-					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
+					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">For the coal states, I will:
+                                           sponsor a Congressional charter to pave way for the future of coal states. If we all remember well, coal and coal producing states have always been there for us since the revolutionary days. 
+					   These states could still be the basket of the nation for the next fifty years. As the 46th President, i'll borrow a leaf from King Lear's Shakespeare. I'll issue an executive order for the 
+					   creation of federally owned corporations in these states (from middle America, to the Gulf coast, and California) Focus will be on the creation of small businesses, technology, material technology, 
+					   water farming, natural disaster control and the developments of new millennial defense structures. This will create enliven a vigorous economic activity throught new jobs and new careers. 
+					   To encourage ownership and further entreprenural activities, I'll sponsor a Congressional charter for public land bonds.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
 					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
@@ -213,16 +216,18 @@
             			<i class="fa fa-envelope"></i>
 					</a>
 				<p>
-					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. 
-					   We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. Let's pledge 
-					   ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and 
-					   different races."</p>  
+					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">For the East Coast, the North and the North eastern states, I will:
+					   Healthcare reform we support. Truth is, a single-payer healthcare system puts money back into your pocket. Pay what you can afford. Pay as you go - employed or unemployed. And since you are not through 
+					   your employer, being out of job does not mean you are out of care with no coverage. No. You are part of a public system that can never be privatized. This is the best way to protect live, family budget 
+					   and your care when you're old.</p>  
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p> 
-					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But who am i? 
-					   Well, I am a Radical Republican, and i believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. Or let's just say, 
-					   I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class. Therefore, for the benefit of commerce, 
-					   agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's 
-					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
+					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">And generally for the United States homeland, I will deploy ambient technology and ambience intelligence. With this type of system 
+					   alone i will be able to:
+						<li>tackle infrastructure update.</li>
+						<li>improve knowledge and accessibiity to the study of, the reasearch of, and the use of material technology in our schools.</li>
+						<li>build roads, buildings, bridges and light our cities with ecologically certified materials.</li>
+						<li>turn our cities and every single communal settlements all over the United states into digitally driven smart cities.</li>
+						<li>improve survival, reach, capability and efficiency of our military and law enforcement officials.</li></p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
 					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
@@ -257,16 +262,11 @@
             			<i class="fa fa-envelope"></i>
 					</a>
 				<p>
-					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. 
-					   We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. Let's pledge 
-					   ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and 
-					   different races."</p>  
+					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">In the area of education, well, best way to shape and sharpen up our education system is to introduce a tenure system into our 
+					   colleges of higher institutions. Create a system that will instill an independent reseach capability into the minds of undergrad students. Free college tuition is not a privilege, it is a natural right 
+					   granted to all born of "the English tongue, so all could practise the art perfected so well by the clergy" since 1072.</p>  
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p> 
-					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But who am i? 
-					   Well, I am a Radical Republican, and i believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. Or let's just say, 
-					   I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class. Therefore, for the benefit of commerce, 
-					   agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's 
-					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
+					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">....</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
 					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
