--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				
 					<!-- Wordpress -->
 			<a href="http://wordpress.com/press-this.php?u=http%3A%2F%2Fsimplesharingbuttons.com%2F&t=Simple%20Sharing%20Buttons%20Generator&s=Share%20to%20Facebook%2C%20Twitter%2C%20Google%2B%20and%20other%20social%20networks%20using%20simple%20HTML%20buttons&i=http://simplesharingbuttons.com/images/preview.png" target="_blank" title="Publish on WordPress">
-				<i class="fa fa-wordpress"></i>
+				<i class="fa fa-wordpress fa-2x"></i>
 					</a>
 				<p>
 					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. 
