--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 					
 					<!-- Twitter -->
-			<a href="http://twitter.com/share?url=https://laurel-smith.github.io/SupportReBuildUSAtoday&text=Put me in CHARGE! And watch me ReBuildUSAtoday!&via=the46th_" target="_blank" class="btn share-btn twitter">
+			<a href="https://www.twitter.com/share?url=https://laurel-smith.github.io/SupportReBuildUSAtoday&text=Put me in CHARGE! And watch me ReBuildUSAtoday!&via=the46th_" target="_blank" class="btn share-btn twitter">
             			<i class="fa fa-twitter"></i>
         		</a>
      	  				<!-- Google Plus -->
-        		<a href="https://plus.google.com/share?url=https://laurel-smith.github.io/SupportReBuildUSAtoday&text=Put me in CHARGE! And watch me ReBuildUSAtoday!" target="_blank" class="btn share-btn google-plus">
+        		<a href="https://www.plus.google.com/share?url=https://laurel-smith.github.io/SupportReBuildUSAtoday&text=Put me in CHARGE! And watch me ReBuildUSAtoday!" target="_blank" class="btn share-btn google-plus">
             			<i class="fa fa-google-plus"></i>
         		</a>
         				<!-- Facebook -->
@@ -63,7 +63,7 @@
             			<i class="fa fa-facebook"></i>
         		</a>			
 					<!-- LinkedIn -->
-        		<a href="http://www.linkedin.com/shareArticle?url=https://laurel-smith.github.io/SupportReBuildUSAtoday&title=SupportReBuildUSatoday&summary=Right now our country is descending into a gerontocracy - a fashionable trend that tends to ignore the rule of law, technology,
+        		<a href="https://www.linkedin.com/shareArticle?url=https://laurel-smith.github.io/SupportReBuildUSAtoday&title=SupportReBuildUSatoday&summary=Right now our country is descending into a gerontocracy - a fashionable trend that tends to ignore the rule of law, technology,
     			infrastructure, climate change, millennials, the general public and the new American energy...&source=<SOURCE_URL>" target="_blank" class="btn share-btn linkedin">
             			<i class="fa fa-linkedin"></i>
         		</a>
@@ -72,7 +72,7 @@
             			<i class="fa fa-envelope"></i>
 				
 					<!-- Wordpress -->
-			<a href="http://wordpress.com/press-this.php?u=http%3A%2F%2Fsimplesharingbuttons.com%2F&t=Simple%20Sharing%20Buttons%20Generator&s=Share%20to%20Facebook%2C%20Twitter%2C%20Google%2B%20and%20other%20social%20networks%20using%20simple%20HTML%20buttons&i=http://simplesharingbuttons.com/images/preview.png" target="_blank" title="Publish on WordPress">
+			<a href="https://www.wordpress.com/press-this.php?u=http%3A%2F%2Fsimplesharingbuttons.com%2F&t=Simple%20Sharing%20Buttons%20Generator&s=Share%20to%20Facebook%2C%20Twitter%2C%20Google%2B%20and%20other%20social%20networks%20using%20simple%20HTML%20buttons&i=http://simplesharingbuttons.com/images/preview.png" target="_blank" title="Publish on WordPress">
 				<i class="fa fa-wordpress fa-2x"></i>
 					</a>
 				<p>
