--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             			<i class="fa fa-linkedin"></i>
         		</a>
         				<!-- Email -->
-        		<a href="mailto:?subject=ReBuildUSAtodayHPAC=We can only make America great again if we ReBuildUSAtoday! I'm committed to SupportReBuildUSAtoday! What about you? https://laurel-smith.github.io/SupportReBuildUSAtoday" target="_blank" class="btn share-btn email">
+        		<a href="mailto:?subject=ReBuildUSAtodayHPAC&amp;Body=We can only make America great again if we ReBuildUSAtoday! I'm committed to SupportReBuildUSAtoday! What about you? https://laurel-smith.github.io/SupportReBuildUSAtoday" target="_blank" class="btn share-btn email">
             			<i class="fa fa-envelope"></i>
 			</a>	
 					<!-- Wordpress -->
-			<a href="https://www.wordpress.com/press-this.php?u=http%3A%2F%2Fsimplesharingbuttons.com%2F&t=Simple%20Sharing%20Buttons%20Generator&s=Share%20to%20Facebook%2C%20Twitter%2C%20Google%2B%20and%20other%20social%20networks%20using%20simple%20HTML%20buttons&i=http://simplesharingbuttons.com/images/preview.png" target="_blank" title="Publish on WordPress">
+			<a href="https://www.wordpress.com/press-this.php?u=" target="_blank" title="Publish on WordPress">
 				<i class="fa fa-wordpress fa-2x"></i>
 					</a>
 				<p>
